# datametronome

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  community_demo.py  docker-compose.yml  env.example  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: prepare-release.yml  publish-all-packages.yml  publish.yml  pulse-core.yml  pulse-postgres-psycopg3.yml  pulse-postgres.yml  pulse-sqlite.yml  test.yml  tests.yml
datametronome/: PACKAGE_STRUCTURE.md
datametronome/brain/base/: .pypi-ignore  README.md  setup.py
datametronome/brain/base/datametronome_brain_base/: __init__.py  profiler.py
datametronome/podium/: .pypi-ignore  Dockerfile  Makefile  README.md  pytest.ini  requirements.txt  setup.py
datametronome/podium/datametronome_podium/: __init__.py  main.py
datametronome/podium/datametronome_podium/api/: __init__.py  deps.py
datametronome/podium/postman/: DataMetronome_Podium_API.postman_collection.json  DataMetronome_Podium_Environment.postman_environment.json  POSTMAN_SETUP.md
datametronome/podium/tests/: __init__.py  test_api_integration.py  test_integration_database.py  test_unit.py
datametronome/pulse/: PYPI_PACKAGE_SETUP.md
datametronome/pulse/core/: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  setup.py
datametronome/pulse/sqlite/: pytest.ini
datametronome/ui-streamlit/: .pypi-ignore  Dockerfile  README.md  requirements.txt  setup.py  streamlit_app.py
datametronome/ui-streamlit/datametronome_ui_streamlit/: __init__.py  main.py
examples/: dynamic_pulse_usage.py
(+43 files in other folders)
