[project]
name = "datametronome"
version = "0.1.0"
description = "DataMetronome - Your Data Quality Maestro"
authors = [
    {name = "The Data Maestros", email = "team@datamaestros.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "httpx>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.0.0",
    "asyncpg>=0.28.0",
    "redis>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.4.0",
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datametronome"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "httpx>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.0.0",
    "asyncpg>=0.28.0",
    "redis>=4.5.0",
]
